<resources>
    <string name="app_name">Mis Tareas MAJS</string>
    <string name="mis_tareas">Mis Tareas</string>
    <string name="imagen_de_fondo">Imagen de Fondo</string>
    <string name="majs">MAJS</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenya">Contraseña</string>
    <string name="aceptar_login">Aceptar Login</string>
    <string name="crear_cuenta_nueva">Crear una Cuenta Nueva</string>
    <string name="terminado">TERMINADO</string>
</resources>
